# reachy_mini

./: .gitignore  AGENTS.md  README.md  agents.local.md  attending-phase-promotion.zh-CN.md  codex-ui-integration-phases.md  codex-ui-phase1-file-checklist.md  emoticorebot-agent-dialogue-websocket.zh-CN.md  emoticorebot-agent-migration-stages.zh-CN.md  emoticorebot-agent-migration.zh-CN.md  mujoco-web-viewer-service-spec.zh-CN.md  open-webui-desktop-robot-migration.md  pyproject.toml  python-remote-backend-minimal-spec.md  reactive-front-phase-event-protocol.zh-CN.md  reactive-front-runtime-build-plan.zh-CN.md  reactive-front-runtime-contract.zh-CN.md  reactive-front-runtime-plan.zh-CN.md  reactive-vision-event-schema.zh-CN.md  reactive-vision-lane-policy.zh-CN.md  robot-platform-pruning-plan.md
.tmp_agent_smoke/demo/: AGENTS.md  FRONT.md  SOUL.md  TOOLS.md  USER.md  config.jsonl
docs/source/: _toctree.yml  index.mdx  troubleshooting.md
profiles/demo_web/: .gitignore  README.md  index.html  pyproject.toml
profiles/demo_web/demo_web/: __init__.py  main.py
profiles/demo_web/demo_web/static/: index.html  style.css
profiles/demo_web/profiles/: AGENTS.md  __init__.py  config.jsonl
profiles/my_app/: README.md  index.html  pyproject.toml
profiles/my_app/my_app/: __init__.py  main.py
profiles/my_app/my_app/static/: index.html  main.js
profiles/my_app/profiles/: FRONT.md  __init__.py  config.jsonl
profiles/my_app/profiles/memory/: affect_state.json
profiles/sim_front_app/: README.md  index.html  plan.md  pyproject.toml  style.css
profiles/sim_front_app/profiles/: FRONT.md  __init__.py  config.jsonl
profiles/sim_front_app/profiles/memory/: affect_state.json
profiles/sim_front_app/sim_front_app/: __init__.py  main.py
profiles/sim_front_app/sim_front_app/static/: index.html  main.js  style.css
skills/: create-app.md
src/ccmini/: CCMINI_EMBEDDABLE_BRAIN_SDK_ZH.md  CCMINI_PROFILES_ZH.md  CCMINI_ROBOT_TOOL_INTEGRATION_ZH.md  COMMANDS_STATUS.md  README_ZH.md  __init__.py  __main__.py  agent.py  agents.local.md  attachments.py  auth.py  cli.py  config.py  distribution_plugins.py  embedded.py  factory.py  frontend_host.py  image.py  keybindings.py  messages.py  output_styles.py  paths.py  permissions.py  plan.md  plugins.py  profiles.py  prompt_defaults.py  prompts.py  setup.py  token_budget.py  tool.py  usage.py  ux.py
src/reachy_mini/: __init__.py
tests/unit_tests/: test_agent_profile_config.py  test_app.py  test_app_runtime_tool_context.py  test_camera_worker_reactive_vision.py  test_companion_runtime_surface.py  test_daemon.py  test_front_agent_runner.py  (+16 more)
ui/: .gitignore  README.md  sync_codex_rs.ps1
ui/robot-ui/: Cargo.toml  README.md  plan.md
ui/robot-ui/src/: main.rs
ui/robot-workbench/kinematics-wasm/: Cargo.toml  README.md
ui/robot-workbench/kinematics-wasm/src/: lib.rs
ui/robot-workbench/kinematics-wasm/tests/: debug_comparison.py  test_comparison.py
(+1211 files in other folders)
