[package]
name = "reachy-mini-kinematics-wasm"
version = "0.1.0"
edition = "2021"
description = "Reachy Mini passive joints kinematics in WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
nalgebra = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[profile.release]
opt-level = 3
lto = true
